--- a/theartofnoises/index.html
+++ b/theartofnoises/index.html
@@ -39,6 +39,12 @@
           <div class="tw-text-container">
             And so was born the concept of sound as a thing in itself, distinct and independent of life, and the result was music, a fantastic world superimposed on the real one, an inviolable and sacred world. It is easy to understand how such a concept of music resulted inevitably in the hindering of its progress by comparison with the other arts. The Greeks themselves, with their musical theories calculated mathematically by Pythagoras and according to which only a few consonant intervals could be used, limited the field of music considerably, rendering harmony, of which they were unaware, impossible.
           </div>
+          <video class="tw-video-margin" autoplay muted loop playsinline id="vid" preload="auto">
+            <source src="../images/luigi.mp4" type="video/mp4">
+          </video>
+          <div class="tw-image-annotation">
+            Luigi Russolo, <span class="tw-text-italic">Intonarumoris</span>, 1913. <a class="tw-underline" href="https://www.youtube.com/watch?v=BYPXAo1cOA4&t=82s&ab_channel=davidrato" target="_blank">Link</a>.
+          </div>
           <div class="tw-text-container">
             The Middle Ages, with the development and modification of the Greek tetrachordal system, with the Gregorian chant and popular songs, enriched the art of music, but continued to consider sound in its development in time, a restricted notion, but one which lasted many centuries, and which still can be found in the Flemish contrapuntalists’ most complicated polyphonies.
           </div>
@@ -84,7 +90,7 @@
           <div class="tw-text-container">
             Let us cross a great modern capital with our ears more alert than our eyes, and we will get enjoyment from distinguishing the eddying of water, air and gas in metal pipes, the grumbling of noises that breathe and pulse with indisputable animality, the palpitation of valves, the coming and going of pistons, the howl of mechanical saws, the jolting of a tram on its rails, the cracking of whips, the flapping of curtains and flags. We enjoy creating mental orchestrations of the crashing down of metal shop blinds, slamming doors, the hubbub and shuffling of crowds, the variety of din, from stations, railways, iron foundries, spinning mills, printing works, electric power stations and underground railways.
           </div>
-          <div class="tw-text-container">
+          <div class="tw-text-container tw-text-container--italic">
             Nor should the newest noises of modern war be forgotten. Recently, the poet Marinetti, in a letter from the trenches of Adrianopolis, described to me with marvelous free words the orchestra of a great battle:
             “every 5 seconds siege cannons gutting space with a chord ZANG-TUMB-TUUMB mutiny of 500 echos smashing scattering it to infinity. In the center of this hateful ZANG-TUMB-TUUMB area 50square kilometers leaping bursts lacerations fists rapid fire batteries. Violence ferocity regularity this deep bass scanning the strange shrill frantic crowds of the battle Fury breathless ears eyes nostrils open! load! fire! what a joy to hear to smell completely taratatata of the machine guns screaming a breathless under the stings slaps traak-traak whips pic-pac-pum-tumb weirdness leaps 200 meters range Far far in back of the orchestra pools muddying huffing goaded oxen wagons pluff-plaff horse action flic flac zing zing shaaack laughing whinnies the tiiinkling jiiingling tramping 3 Bulgarian battalions marching croooc-craaac [slowly] Shumi Maritza or Karvavena ZANG-TUMB-TUUUMB toc-toc-toc-toc [fast] crooc-craac [slowly] crys of officers slamming about like brass plates pan here paak there BUUUM ching chaak [very fast] cha-cha-cha-cha-chaak down there up around high up look out your head beautiful! Flashing flashing flashing flashing flashing flashing footlights of the forts down there behind that smoke Shukri Pasha communicates by phone with 27 forts in Turkish in German Allo! Ibrahim! Rudolf! allo! allo! actors parts echos of prompters scenery of smoke forests applause odor of hay mud dung I no longer feel my frozen feet odor of gunsmoke odor of rot Tympani flutes clarinets everywhere low high birds chirping blessed shadows cheep-cheep-cheep green breezes flocks don-dan-don-din-baaah Orchestra madmen pommel the performers they terribly beaten playing Great din not erasing clearing up cutting off slighter noises very small scraps of echos in the theater area 300 square kilometers Rivers Maritza Tungia stretched out Rodolpi Mountains rearing heights loges boxes 2000 shrapnels waving arms exploding very white handkerchiefs full of gold srrrr-TUMB-TUMB 2000 raised grenades tearing out bursts of very black hair ZANG-srrrr-TUMB-ZANG-TUMB-TUUMB the orchestra of the noises of war swelling under a held note of silence in the high sky round golden balloon that observes the firing…”
           </div>
@@ -108,6 +114,11 @@
           </div>
           <div class="tw-text-container">
             Although it is characteristic of noise to recall us brutally to real life, the art of noise must not limit itself to imitative reproduction. It will achieve its most emotive power in the acoustic enjoyment, in its own right, that the artist’s inspiration will extract from combined noises.
+          </div>
+          <div class="tw-washing-container">
+            <a href="../">
+              <img src="../images/washing-basket.png">
+            </a>
           </div>
         </div>
       </div>
