--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
             <a href="./theartofnoises">
               <div class="tw-link-container">
                 The Art of Noises Manifesto by Luigi Russolo
-                <div class="tw-small-image">
-                  <img src="./images/luigi.jpg">
-                </div>
+                <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/luigi.mp4" type="video/mp4">
+                </video>
               </div>
             </a>
             <div class="tw-link-container">
               audio visual dissonance
-              <div class="tw-small-image">
-                <img src="./images/jehovah.png">
-              </div>
+              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="./images/jehovah-2.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
           <div class="tw-boxes-container--second">
             <div class="tw-link-container">
               15 machines
-              <div class="tw-small-image">
-                <img src="./images/dentist.png">
-              </div>
+              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="./images/dentist.mp4" type="video/mp4">
+              </video>
             </div>
             <div class="tw-link-container">
               Sirens Taken for Wonders by Paul Elliman
@@ -52,9 +52,9 @@
           <div class="tw-boxes-container--third">
             <div class="tw-link-container">
               24 hour laundry, great north rd
-              <div class="tw-small-image">
-                <img src="./images/washing-machine.png">
-              </div>
+              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="./images/short-washing-machine.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
         </div>
