--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
               </div>
             </a>
             <div class="tw-link-container">
-              audio visual dissonance
+              Sirens Taken for Wonders by Paul Elliman
               <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
-                <source src="./images/jehovah-2.mp4" type="video/mp4">
+                <source src="./images/firetruck.mp4" type="video/mp4">
               </video>
             </div>
           </div>
@@ -43,10 +43,10 @@
               </video>
             </div>
             <div class="tw-link-container">
-              Sirens Taken for Wonders by Paul Elliman
-              <div class="tw-small-image">
-                <img src="./images/firetruck.png">
-              </div>
+              audio visual dissonance
+              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="./images/jehovah-2.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
           <div class="tw-boxes-container--third">
