--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
                 </video>
               </div>
             </a>
-            <div class="tw-link-container">
-              Sirens Taken for Wonders by Paul Elliman
-              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
-                <source src="./images/firetruck.mp4" type="video/mp4">
-              </video>
-            </div>
+              <a href="./sirenstakenforwonders">
+              <div class="tw-link-container">
+                Sirens Taken for Wonders by Paul Elliman
+                <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/firetruck.mp4" type="video/mp4">
+                </video>
+              </div>
+            </a>
           </div>
           <div class="tw-boxes-container--second">
             <div class="tw-link-container">
