--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     </head>
     <body>
       <div class="tw-page">
+        <div class="tw-landing-container" id="tw-toggle">
+            <button onclick="myFunction()">
+            <div class="tw-landing-image">
+              <img src="./images/flashing-sign.gif">
+            </div>
+            </button>
+        </div>
         <div class="tw-header-container">
           <div class="tw-header-container-inner">
             <a href="./"><span class="tw-pink-hover">24 HOUR LAUNDRY</span></a>
