--- a/machines/index.html
+++ b/machines/index.html
@@ -13,161 +13,145 @@
     </head>
     <body>
       <audio id="audio"></audio>
-      <div class="so-scan-container">
-        <div class="so-scan-container-inner">
+      <div class="tw-page">
+        <div class="tw-header-container">
+          <div class="tw-header-container-inner">
+            <a href="../"><span class="tw-pink-hover">24 HOUR LAUNDRY</span></a>
+          </div>
+        </div>
+        <div class="tw-main-content-container">
+          <div class="tw-main-content-container-inner">
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/laundromat.mp3')">Laundromat</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/boring-machine.mp3')">Boring Machine</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/cat.mp3')">Cat</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/garbage-truck.mp3')">Garbage Truck</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/wind-turbine.mp3')">Wind Turbine</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/mixer.mp3')">Mixer</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/computer-starting.mp3')">Computer</button>
+              </div>
+            </div>
 
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/laundromat.mp3')">&nbsp;</button>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/f1.mp3')">F1</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/waste-disposer.mp3')">Waste Disposer</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/kettle.mp3')">Kettle</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/dentist.mp3')">Dentist</button>
+              </div>
+            </div>
+
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/photocopier.mp3')">Photocopier</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/offset-printer.mp3')">Printer</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/oil-rig.mp3')">Oil Rig</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/tank.mp3')">Tank</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/sea-plane.mp3')">Sea Plane</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/motorcycle.mp3')">Motocycle</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/street-cleaner.mp3')">Street Cleaner</button>
+              </div>
+            </div>
+
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/leaf-blower.mp3')">Leaf Blower</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/lawnmower.mp3')">Lawnmower</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/jet-ski.mp3')">Jet Ski</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/elevator.mp3')">Elevator</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/rocket.mp3')">Rocket</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container tw-play-stop-container--fixed">
+              <div class="tw-play-stop-button">
+                <button class="red" onclick="stopAudio()">Stop</button>
+              </div>
             </div>
           </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/boring-machine.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/cat.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/garbage-truck.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/wind-turbine.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/mixer.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/computer-starting.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/f1.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/waste-disposer.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/kettle.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/dentist.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/photocopier.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/offset-printer.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/oil-rig.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/tank.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/sea-plane.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/motorcycle.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/street-cleaner.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/leaf-blower.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/lawnmower.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/jet-ski.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/elevator.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/rocket.mp3')">&nbsp;</button>
-            </div>
-          </div>
-
-          <div class="so-play-stop-container so-play-stop-container--fixed">
-            <div class="so-play-stop-button">
-              <button class="red" onclick="stopAudio()">&nbsp;</button>
-            </div>
-          </div>
-
         </div>
       </div>
-
-      <div class="so-video-container">
-        <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+      <div class="tw-video-container">
+        <video class="tw-video-width" autoplay muted loop playsinline id="vid" preload="auto">
           <source src="../images/dentist.mp4" type="video/mp4">
         </video>
-        <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+        <video class="tw-video-width" autoplay muted loop playsinline id="vid" preload="auto">
           <source src="../images/garbage-truck.mp4" type="video/mp4">
         </video>
       </div>
