--- a/laundromat/index.html
+++ b/laundromat/index.html
@@ -13,38 +13,47 @@
     </head>
     <body>
       <audio id="audio"></audio>
-      <div class="so-scan-container">
-        <div class="so-scan-container-inner">
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('../audio/laundromat.mp3')">&nbsp;</button>
-            </div>
-            <div class="so-play-stop-button ">
-              <button class="red" onclick="stopAudio()">&nbsp;</button>
-            </div>
+      <div class="tw-page">
+        <div class="tw-header-container">
+          <div class="tw-header-container-inner">
+            <a href="../"><span class="tw-pink-hover">24 HOUR LAUNDRY</span></a>
           </div>
-          <div class="so-video-margin">
-            <video class="so-video-width so-video-width--one" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width so-video-width--three" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width so-video-width--fourth" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width so-video-width--five" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="../images/washing-machine.mp4" type="video/mp4">
-            </video>
+        </div>
+        <div class="tw-main-content-container">
+          <div class="tw-main-content-container-inner">
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button onclick="play('../audio/laundromat.mp3')">Play</button>
+              </div>
+            </div>
+            <div class="tw-play-stop-container">
+              <div class="tw-play-stop-button">
+                <button class="red" onclick="stopAudio()">Stop</button>
+              </div>
+            </div>
+            <div class="tw-video-margin">
+              <video class="tw-video-width tw-video-width--one" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+              <video class="tw-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+              <video class="tw-video-width tw-video-width--three" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+              <video class="tw-video-width tw-video-width--fourth" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+              <video class="tw-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+              <video class="tw-video-width tw-video-width--five" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+              <video class="tw-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="../images/washing-machine.mp4" type="video/mp4">
+              </video>
+            </div>
           </div>
         </div>
       </div>
