--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
             </a>
           </div>
           <div class="tw-boxes-container--second">
-            <div class="tw-link-container">
-              15 machines
-              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
-                <source src="./images/dentist.mp4" type="video/mp4">
-              </video>
-            </div>
+            <a href="./machines">
+              <div class="tw-link-container">
+                15 machines
+                <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/dentist.mp4" type="video/mp4">
+                </video>
+              </div>
+            </a>
             <div class="tw-link-container">
               audio visual dissonance
               <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
@@ -60,11 +62,19 @@
           </div>
           <div class="tw-boxes-container--third">
             <div class="tw-link-container">
-              24 hour laundry, great north rd
+              open signs
               <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
-                <source src="./images/short-washing-machine.mp4" type="video/mp4">
+                <source src="./images/open-sign.mp4" type="video/mp4">
               </video>
             </div>
+              <a href="./laundromat">
+              <div class="tw-link-container">
+                24 hour laundry, great north rd
+                <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/short-washing-machine.mp4" type="video/mp4">
+                </video>
+              </div>
+            </a>
           </div>
         </div>
       </div>
