--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
                 </video>
               </div>
             </a>
-            <div class="tw-link-container">
-              audio visual dissonance
-              <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
-                <source src="./images/jehovah-2.mp4" type="video/mp4">
-              </video>
-            </div>
+            <a href="./dissonance">
+              <div class="tw-link-container">
+                audio visual dissonance
+                <video class="tw-small-video" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/jehovah-2.mp4" type="video/mp4">
+                </video>
+              </div>
+            </a>
           </div>
           <div class="tw-boxes-container--third">
             <div class="tw-link-container">
