--- a/theartofnoises/index.html
+++ b/theartofnoises/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="">
     <link rel="stylesheet" href="site.css">
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
-    <script src="./custom.js" defer="defer"></script>
+    <script src="../custom.js" defer="defer"></script>
     </head>
     <body>
       <div class="tw-page">
