--- a/dissonance/index.html
+++ b/dissonance/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="tw-play-stop-container">
               <div class="tw-play-stop-button">
-                <button onclick="play('../audio/kate.mp3')">Play</button>
+                <button onclick="play('../audio/kate-moss.mp3')">Play</button>
               </div>
             </div>
             <div class="tw-play-stop-container">
